--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>QR Clue</title>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./qr-codes/styles.css">
 </head>
 <body>
   <div id="gate">
@@ -34,6 +34,6 @@
     </div>
   </div>
 
-  <script src="./app.js"></script>
+  <script src="./qr-codes/app.js"></script>
 </body>
 </html>
