--- a/index.html
+++ b/index.html
@@ -8,89 +8,99 @@
 <title>QR Clue — Halloween Hunt</title>
 <style>
   :root{
-    --bg:#0b0f14;
-    --card: rgba(255,255,255,.06);
-    --stroke: rgba(255,255,255,.12);
+    --bg:#000000;
     --text:#f3f6fb;
     --accent:#ff6a00;
     --accent2:#8a2be2;
   }
   *{box-sizing:border-box}
-  html,body{height:100%;margin:0}
-  body{
-    background: radial-gradient(1200px 600px at 50% -10%, #111627 0%, var(--bg) 60%);
-    color: var(--text);
-    font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    display:flex;align-items:center;justify-content:center;padding:20px
+  html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif}
+
+  /* Gate card */
+  #gate{
+    position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
+    padding:24px; background: radial-gradient(1200px 700px at 50% -10%, #111627 0%, #0b0f14 60%);
+    z-index:30;
   }
-  .wrap{width:100%;max-width:760px}
   .card{
-    background:var(--card);
-    border:1px solid var(--stroke);
+    width:min(820px, 92vw);
+    background:rgba(255,255,255,.06);
+    border:1px solid rgba(255,255,255,.12);
     border-radius:16px;
     padding:20px;
-    box-shadow:0 12px 28px rgba(0,0,0,.35)
+    box-shadow:0 12px 28px rgba(0,0,0,.45);
+    text-align:center;
   }
-  .hidden{display:none}
-  .title{font-size:1.35rem;font-weight:900;letter-spacing:.3px;margin-bottom:8px}
-  .meta{opacity:.85;margin:.25rem 0 1rem}
+  .title{font-size:1.35rem;font-weight:900;margin-bottom:8px}
+  .meta{opacity:.9;margin:.25rem 0 1rem}
   .btn{
-    -webkit-tap-highlight-color:transparent;
-    display:inline-flex;align-items:center;gap:10px;
-    padding:14px 18px;border:0;border-radius:14px;
-    font-weight:800;font-size:1.05rem;
-    color:#1a1a1a;background:linear-gradient(135deg, var(--accent), #ff9f1a);
+    -webkit-tap-highlight-color:transparent; display:inline-flex; align-items:center; gap:10px;
+    padding:14px 18px; border:0; border-radius:14px; font-weight:800; font-size:1.05rem;
+    color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a);
     box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25);
   }
-  .btn:active{transform:translateY(1px);opacity:.98}
-  .btn .icon{font-size:1.2rem}
-  .btn.alt{
-    background: linear-gradient(135deg, var(--accent2), #b77bff);
-    color:white;
-    box-shadow:0 8px 18px rgba(138,43,226,.35), inset 0 1px 0 rgba(255,255,255,.18);
-  }
+
+  /* Fullscreen video */
+  #player{ position:fixed; inset:0; background:#000; z-index:20; }
   video{
-    width:100%;max-width:720px;border-radius:14px;background:#000;
-    transition: opacity .9s ease;
+    position:absolute; inset:0; width:100%; height:100%;
+    object-fit:cover; object-position:center;
+    background:#000;
+    transition:opacity .9s ease;
   }
-  .fade-out{opacity:0}
-  .clue{white-space:pre-wrap;line-height:1.6;margin-top:10px}
-  .code{opacity:.9;font-style:italic;margin-top:8px}
-  .footer{opacity:.75;margin-top:8px;font-size:.95rem}
+  .fade-out{ opacity:0; }
+
+  /* Clue content */
+  #content{
+    position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
+    padding:24px; background:#000; z-index:10; /* under video until reveal */
+    opacity:0; filter: blur(6px); transform: translateY(6px);
+    transition: opacity 1.5s ease, filter 1.5s ease, transform 1.5s ease;
+  }
+  #content.reveal{ opacity:1; filter: blur(0px); transform: translateY(0); }
+  .clue-card{
+    width:min(820px, 92vw);
+    background:rgba(255,255,255,.06);
+    border:1px solid rgba(255,255,255,.12);
+    border-radius:16px; padding:20px;
+    box-shadow:0 12px 28px rgba(0,0,0,.45);
+  }
+  .clue-title{font-size:1.2rem;font-weight:900;margin-bottom:8px}
+  .clue-meta{opacity:.85;margin-bottom:10px}
+  .clue-text{white-space:pre-wrap;line-height:1.65}
+  .clue-code{opacity:.9;font-style:italic;margin-top:10px}
+
+  .hidden{display:none}
 </style>
 </head>
 <body>
   <!-- Gate -->
-  <div id="gate" class="wrap">
-    <div class="card" style="text-align:center">
+  <div id="gate">
+    <div class="card">
       <div class="title">🎃 Halloween Hunt Start</div>
       <div class="meta">Tap the button to start the <strong>October 2025 Halloween Scavenger Hunt Experience</strong>. Winner gets a <strong>$25 gift card!</strong></div>
-      <button id="start" class="btn"><span class="icon">🕷️</span> Start the Spook</button>
-      <div class="footer">Tip: On iPhone, sound/video plays only after a tap by design.</div>
+      <button id="start" class="btn"><span>🕷️</span> Start the Spook</button>
     </div>
   </div>
 
-  <!-- Player -->
-  <div id="player" class="wrap hidden">
-    <div class="card">
-      <video id="vid" src="./halloween.mp4" playsinline preload="auto"></video>
-      <div id="status" class="meta">Loading…</div>
-      <button id="restart" class="btn alt hidden"><span class="icon">🔁</span> Replay</button>
-    </div>
+  <!-- Fullscreen Player (video only) -->
+  <div id="player" class="hidden">
+    <!-- IMPORTANT: Put your 25s video next to this file as "halloween.mp4" -->
+    <video id="vid" src="./halloween.mp4" playsinline preload="auto"></video>
   </div>
 
-  <!-- Clue -->
-  <div id="content" class="wrap hidden">
-    <div class="card">
-      <div class="title">?</div>
-      <div class="meta">Clue: 25/30 • Difficulty: 5/6</div>
-      <div class="clue">In the sacred alcove where prayers ascend,
+  <!-- Clue Content (fades in after video) -->
+  <div id="content">
+    <div class="clue-card">
+      <div class="clue-title">?</div>
+      <div class="clue-meta">Clue: 25/30 • Difficulty: 5/6</div>
+      <div class="clue-text">In the sacred alcove where prayers ascend,
 A box of reverence, where solace blends. Gaze upwards,
 where angels might tread, on the right-hand path, a clue is spread.
 
 Beyond eye's reach, a festive light gleams,
 Ascend to the top, where the mystery teems.</div>
-      <div class="code">Code: SugarPlumDreams (December 17th)</div>
+      <div class="clue-code">Code: SugarPlumDreams (December 17th)</div>
     </div>
   </div>
 
@@ -98,32 +108,25 @@ Ascend to the top, where the mystery teems.</div>
 const gate = document.getElementById('gate');
 const player = document.getElementById('player');
 const content = document.getElementById('content');
-const statusEl = document.getElementById('status');
 const startBtn = document.getElementById('start');
-const restartBtn = document.getElementById('restart');
 const vid = document.getElementById('vid');
 
-const VIDEO_LEN_MS = 25000;
-let fadeTimeout = null;
-let endTimeout  = null;
+const VIDEO_LEN_MS = 25000; // 25 seconds
+let fadeTimeout = null, endTimeout = null;
 
 function show(el){ el.classList.remove('hidden'); }
 function hide(el){ el.classList.add('hidden'); }
-function status(msg){ statusEl.textContent = msg; }
 
 function begin(){
+  // Hide gate, show player
   hide(gate); show(player);
-  status('Loading…');
 
   try { vid.pause(); vid.currentTime = 0; } catch(_){}
-
-  const playPromise = vid.play();
-  if (playPromise && typeof playPromise.then === 'function') {
-    playPromise.then(()=>{
-      status('Playing…');
-      scheduleFadeAndEnd();
-    }).catch(e=>{
-      status('Tap video to play (iOS policy).');
+  const p = vid.play();
+  if (p && typeof p.then === 'function') {
+    p.then(()=> scheduleFadeAndEnd() ).catch(()=> {
+      // iOS safety: if blocked, require direct tap on video
+      vid.addEventListener('click', ()=> { vid.play(); scheduleFadeAndEnd(); }, { once:true });
     });
   } else {
     scheduleFadeAndEnd();
@@ -134,31 +137,22 @@ function scheduleFadeAndEnd(){
   const FADE_MS = 900;
   clearTimeout(fadeTimeout); clearTimeout(endTimeout);
 
-  fadeTimeout = setTimeout(()=>{
-    vid.classList.add('fade-out');
-  }, Math.max(0, VIDEO_LEN_MS - FADE_MS));
+  fadeTimeout = setTimeout(()=> vid.classList.add('fade-out'), Math.max(0, VIDEO_LEN_MS - FADE_MS));
 
   endTimeout = setTimeout(()=>{
     try { vid.pause(); } catch(_){}
-    hide(player); show(content);
-    vid.classList.remove('fade-out');
-    restartBtn.classList.remove('hidden');
-  }, VIDEO_LEN_MS + 120);
+    hide(player);
+    content.classList.add('reveal');
+  }, VIDEO_LEN_MS + 100);
 }
 
-vid.addEventListener('canplaythrough', ()=> status('Ready. Tap Start.'));
-vid.addEventListener('play', ()=> status('Playing…'));
+// In case the file ends earlier than 25s
 vid.addEventListener('ended', ()=>{
-  hide(player); show(content);
-  vid.classList.remove('fade-out');
-  restartBtn.classList.remove('hidden');
+  hide(player);
+  content.classList.add('reveal');
 });
 
 startBtn.addEventListener('click', begin);
-restartBtn.addEventListener('click', ()=>{
-  hide(content); show(player);
-  begin();
-});
 </script>
 </body>
 </html>
